# SpaceShip

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp  resources.rc  tree.md
data/: animation.json  font.json  music.json  resources.json  sound.json  texture.json
data/scenes/: menu_scene.txt
data/scenes/menu/: menu_music.txt  menu_sound.txt
design/: Menu.md  ResourceManager.md  class.md  flowchart.md
lib/Debug/: Engined.lib  Loggerd.lib  Resourcesd.exp  Scenesd.exp  Scenesd.lib  Utilsd.lib  box2d-lite.lib  glad.lib  glfw.lib  glm.lib  imgui.lib
script/: tree.py
script/resource/: asset.py  scene.py
src/: CMakeLists.txt  Game.cpp  Game.h  Object.h  Scene.cpp  Scene.h  SceneEnd.cpp  SceneEnd.h  SceneMain.cpp  SceneMain.h  SceneTitle.cpp  SceneTitle.h  main.cpp
src/component/: CMakeLists.txt  Component.h
src/engine/: CMakeLists.txt  Engine.cpp  Engine.h
src/log/: CMakeLists.txt  Logger.cpp  Logger.h
src/misc/: CMakeLists.txt  utils.cpp  utils.h
src/resources/: AnimationResource.cpp  AnimationResource.h  CMakeLists.txt  FontResource.cpp  FontResource.h  MusicResource.cpp  MusicResource.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  SoundResource.cpp  SoundResource.h  TextureResource.cpp  TextureResource.h
src/scenes/: CMakeLists.txt  LevelScene.h  Menu.cpp  Menu.h  MenuScene.cpp  MenuScene.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/scenes/config/: HelpScene.cpp  HelpScene.h  OptionScene.cpp  OptionScene.h  QuitScene.cpp  QuitScene.h  SceneConfig.cpp  SceneConfig.h  SceneLoader.cpp  SceneLoader.h  SettingScene.cpp  SettingScene.h
src/scenes/level/: LevelScene.cpp  LevelScene.h
src/scenes/transitions/: SceneTransition.cpp  SceneTransition.h
